# V4-Engine

./: .gitignore  Cargo.toml  example.rs
examples/: Cargo.toml
examples/shaders/: fragment.wgsl  vertex.wgsl
examples/shaders/compute/: compute.wgsl
examples/shaders/hello_world/: fragment.wgsl  point_frag.wgsl  point_vert.wgsl  screen_space.wgsl  screen_space_blur.wgsl  skybox_compute.wgsl  skybox_fragment.wgsl  skybox_vertex.wgsl  vertex.wgsl
examples/shaders/textures/: fragment.wgsl  vertex.wgsl
examples/src/: compute.rs  egui.rs  font_render.rs  hello_world.rs  main.rs  textures.rs  workload_test.rs
v4/: Cargo.toml
v4-core/: Cargo.toml
v4-core/src/: lib.rs
v4-core/src/default_shaders/: screen_space_output_fragment.wgsl  screen_space_vertex.wgsl
v4-core/src/ecs/: actions.rs  component.rs  compute.rs  entity.rs  material.rs  mod.rs  pipeline.rs  scene.rs
v4-core/src/engine_management/: engine_action.rs  font_management.rs  mod.rs  pipeline.rs  rendering_management.rs
v4-core/src/engine_support/: core_communication_support.rs  misc_utils.rs  mod.rs  texture_support.rs
v4-macros/: Cargo.toml
v4-macros/src/: component.rs  lib.rs  scene.rs
v4/src/: builtin_actions.rs  lib.rs
v4/src/builtin_components/: camera_component.rs  mesh_component.rs  transform_component.rs
