[workspace]
members = [ "examples", "v4",
    "v4-core",
    "v4-macros",
    "examples",
]
resolver = "2"

[workspace.package]
version = "0.1.10"
authors = ["Lior Carmeli"]

[workspace.dependencies]
bytemuck = { version = "1.18.0", features = ["derive"] }
env_logger = "0.10.0"
wgpu = "22.1.0"
nalgebra = "0.32.3"
smaa = "0.15.0"
futures = "0.3.30"
tokio = {version = "1.40.0", features = ["full"]}
imgui = {version = "0.12.0", features = ["tables-api"]}
imgui-wgpu = {git = "https://github.com/GameHunter101/imgui-wgpu-rs"}
pollster = "0.3.0"
log = "0.4.22"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
async-trait = "0.1.83"
winit = "=0.29.15"
winit_input_helper = "0.16.0"
imgui-winit-support = "=0.12.0"
glyphon = "=0.6.0"
tobj = { version = "4.0.2", features = ["async"] }
crossbeam-channel = "0.5.14"

[workspace.dependencies.image]
version = "0.25.2"
default-features = false
features = ["png", "jpeg"]

