[workspace]
members = [ "examples", "v4",
    "v4-core",
    "v4-macros",
    "examples",
]
resolver = "2"

[profile.release]
debug = true
strip = false

[workspace.package]
version = "0.3.1"
authors = ["Lior Carmeli"]

[workspace.dependencies]
algoe = { git = "https://github.com/GameHunter101/Algoe" }
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
async-trait = "0.1.83"
bytemuck = { version = "1.18.0", features = ["derive"] }
crossbeam-channel = "0.5.14"
downcast-rs = "2.0.1"
egui = "0.33.3"
egui_wgpu_backend = { git = "https://github.com/GameHunter101/egui_wgpu_backend" }
egui_winit_platform = { git = "https://github.com/GameHunter101/egui_winit_platform" }
env_logger = "0.10.0"
futures = "0.3.30"
glyphon = "0.10.0"
log = "0.4.22"
nalgebra = "0.33.2"
pollster = "0.3.0"
smaa = "0.19.0"
tobj = { version = "4.0.2", features = ["async"] }
tokio = {version = "1.40.0", features = ["full"]}
wgpu = {version = "28.0.0", features = ["spirv"]}
winit = "0.31.0-beta.2"
winit_input_helper = { git = "https://github.com/GameHunter101/winit_input_helper" }

[workspace.dependencies.image]
version = "0.25.9"
default-features = false
features = ["png", "jpeg", "hdr"]

