[package]
name = "v4-examples"
edition = "2024"
version = "0.3.3"
authors.workspace = true

[dependencies]
v4 = {path = "../v4"}
tokio.workspace = true
wgpu.workspace = true
async-scoped.workspace = true
bytemuck.workspace = true
glyphon.workspace = true
winit_input_helper.workspace = true
async-trait.workspace = true
winit.workspace = true
nalgebra.workspace = true
algoe.workspace = true
egui.workspace = true
egui_demo_lib = "0.33.3"
