[package]
name = "v4-core"
version = "0.3.0"
authors.workspace = true
edition = "2024"

[dependencies]
algoe.workspace = true
async-scoped.workspace = true
async-trait.workspace = true
bytemuck.workspace = true
crossbeam-channel.workspace = true
downcast-rs.workspace = true
egui.workspace = true
egui_wgpu_backend.workspace = true
egui_winit_platform.workspace = true
env_logger.workspace = true
futures.workspace = true
glyphon.workspace = true
image.workspace = true
log.workspace = true
nalgebra.workspace = true
pollster.workspace = true
smaa.workspace = true
tobj.workspace = true
tokio.workspace = true
wgpu.workspace = true
winit.workspace = true
winit_input_helper.workspace = true
