[package]
name = "v4"
edition = "2024"
version = "0.2.67"
authors.workspace = true

[dependencies]
bytemuck.workspace = true
# env_logger.workspace = true
wgpu.workspace = true
nalgebra.workspace = true
# smaa.workspace = true
# futures.workspace = true
# tokio.workspace = true
# imgui.workspace = true
# imgui-wgpu.workspace = true
# pollster.workspace = true
# log.workspace = true
# async-scoped.workspace = true
async-trait.workspace = true
winit.workspace = true
winit_input_helper.workspace = true
# imgui-winit-support.workspace = true
tobj.workspace = true
glyphon.workspace = true
algoe.workspace = true
downcast-rs.workspace = true
v4-core = { path = "../v4-core" }
v4-macros = { path = "../v4-macros" }
bevy_mikktspace = "0.16.1"
